# Shutter-Controller

./: .gitattributes  .gitignore  .gitmodules  ReadMe.md
.github/workflows/: cmake-linux.yml  cmake-wasm.yml  cmake-windows.yml  platformio-server.yaml
Android Client/: ReadMe.md
Android Client/app/: build.gradle
Android Client/app/src/androidTest/java/com/example/rednykapcsol/: ExampleInstrumentedTest.java
Android Client/app/src/androidTest/java/com/mapema/shuttercontroller/: ExampleInstrumentedTest.java
Android Client/app/src/main/: AndroidManifest.xml
Android Client/app/src/main/java/com/example/rednykapcsol/: ActivityNotifier.java  AppContext.java  FragmentCommunicating.java  FragmentNotifier.java  Message.java  MessageAdapter.java  MessageContainer.java  PeriodicShutterWork.java  RequestDispatcher.java  RequestDispatcher2.java  Timing.java  WeekDay.java  ZeroState.java
Android Client/app/src/main/java/com/example/rednykapcsol/activities/: MainActivity.java
Android Client/app/src/main/java/com/example/rednykapcsol/fragments/: BottomSettingsSheet.java  InfoDialogFragment.java  SeekbarFragment.java  TimeoutDialogFragment.java  TimingConfigFragment.java  TimingSelectorFragment.java  ZeroAutomatic.java  (+2 more)
Android Client/app/src/main/java/com/mapema/shuttercontroller/: ActivityNotifier.java  AppContext.java  FragmentNotifier.java  Message.java  MessageAdapter.java  MessageContainer.java  PeriodicShutterWork.java  RequestDispatcher.java  Timing.java  WeekDay.java  ZeroState.java
Android Client/app/src/main/res/layout/: activity_main.xml  bottom_settings_sheet.xml  info_dialog.xml  message_row.xml  seekbar_layout.xml  timing_config.xml  timing_row.xml  timing_selector.xml
Android Client/app/src/main/res/values/: colors.xml  strings.xml
Android Client/app/src/main/res/values-hu/: strings-hu.xml
Android Client/app/src/test/java/com/example/rednykapcsol/: ExampleUnitTest.java
Android Client/app/src/test/java/com/mapema/shuttercontroller/: ExampleUnitTest.java
Android Client/gradle/wrapper/: gradle-wrapper.properties
Browser Client/: Control.html  Login.html  LoginFail.html  ReadMe.md
Controlling Circuit/ShutterController/: PCB_ShutterController.json  ShutterController.json  info
Desktop Client/: .gitignore  ReadMe.md  ShutterControllerDesktopClient.pro  application.qrc  main.cpp  messages.cpp  messages.h  timing.cpp  timing.h
Desktop Client/languages/: en.txt  hu.txt  languages.cpp  languages.h
Desktop Client/mainwindow/: mainwindow.cpp  mainwindow.h  messagelist.cpp  messagelist.h  messagewidget.cpp
Desktop Client/requests/: dumpgetrequest.cpp  dumpgetrequest.h  request.cpp  request.h  requestqueue.cpp  setpostrequest.cpp  setpostrequest.h  statusgetrequest.cpp  statusgetrequest.h  timingpostrequest.cpp  timingpostrequest.h  zeropostrequest.cpp  zeropostrequest.h
Desktop Client/setdialog/: setdialog.cpp
Desktop Client/timingdialog/: dayswitch.cpp  dayswitch.h  timingdialog.cpp  timingdialog.h  timingitemwidget.cpp  timingitemwidget.h  toggleswitch.cpp  toggleswitch.h
Desktop Client/zerodialog/: zerodialog.cpp
DesktopClient/: .gitignore  ReadMe.md  ShutterControllerDesktopClient.pro  application.qrc  main.cpp  mainwindow.ui  messages.cpp  timing.cpp  timing.h
DesktopClient/languages/: translation_en.qm  translation_en.ts  translation_hu.qm  translation_hu.ts
DesktopClient/mainwindow/: mainwindow.cpp  mainwindow.h  messagewidget.cpp  messagewidget.h
DesktopClient/requests/: dumpgetrequest.cpp  request.h  requestqueue.cpp  requestqueue.h  setpostrequest.h  statusgetrequest.cpp  statusgetrequest.h
DesktopClient/resources/: connection.txt  translation_en.txt  translation_hu.txt
DesktopClient/setdialog/: setdialog.cpp  setdialog.h
DesktopClient/src/: Main.cpp  MainWindow.h  Message.h  Timing.h
DesktopClient/src/Request/: EmscriptenRequest.h
DesktopClient/timingdialog/: dayswitches.cpp  dayswitches.h  timingdialog.cpp  timingitemwidget.cpp  toggleswitch.cpp
DesktopClient/zerodialog/: zerodialog.cpp  zerodialog.h
ESP8266 Server/: MessageHandler.cpp  MessageHandler.h  ServerContainer.cpp  ServerContainer.h  SettingProcess.cpp  TimeCalibration.h  Timing.cpp  Timing.h
ESP8266_Server/: .gitignore  Configuration.cpp  Configuration.h  ESP8266_Server.ino  Keys.h  ReadMe.md  TimingSetter.cpp  TimingSetter.h  config.py  platformio.ini
ESP8266_Server/src/: BrowserClient.h  Configuration.h  ESP8266_Server.ino  LittleFSHandler.cpp  LittleFSHandler.h  LittleFSHelper.cpp  LittleFSHelper.h  MessageHandler.cpp  MessageHandler.h  RawMessage.h  ServerContainer.cpp  ServerContainer.h  Shutter.options  Shutter.proto  TimeCalibration.cpp  TimeCalibration.h
ESP8266_Server/src/Processes/: ProcessQueue.cpp  ProcessQueue.h  SettingProcess.cpp  SettingProcess.h  Timing.cpp  Timing.h  TimingContainer.cpp  TimingContainer.h  ZeroProcess.cpp  ZeroProcess.h
ESP8266_Server/src/app/: BrowserClient.h  DdnsUpdater.h  LittleFSHandler.cpp  MessageHandler.h  ServerContainer.cpp  ServerContainer.h  Shutter.options  Shutter.proto  TimeCalibration.cpp  TimeCalibration.h
ESP8266_Server/src/app/Processes/: ProcessQueue.cpp  ProcessQueue.h  SettingProcess.h  Timing.h  TimingContainer.cpp  TimingContainer.h  ZeroProcess.cpp  ZeroProcess.h
HTML+JS-client/: HtmlJsClient.html  Login.html  LoginFail.html  ReadMe.md  control.css  control.js  login.css  requestqueue.js
Wasm-client/: .gitignore  CMakeLists.txt  ReadMe.md  WasmClient.html
Wasm-client/HTML/: WasmClient.html  wasm-client.css
Wasm-client/assets/: translation_en.txt  translation_hu.txt
Wasm-client/resources/: translation_en.txt  translation_hu.txt
Wasm-client/src/: EmscriptenGlue.cpp  EmscriptenGlue.h  Main.cpp  MainWindow.cpp  MainWindow.h  Message.h  RequestQueue.cpp  RequestQueue.h  Timing.h  WindowHandler.cpp  WindowHandler.h
Wasm-client/src/Request/: DemoRequest.h  EmscriptenRequest.h  Request.h  SimpleRequest.h
Wasm-client/src/sc/: Main.cpp  MainWindow.cpp  MainWindow.h  RequestQueue.cpp  RequestQueue.h  WindowHandler.cpp
Wasm-client/src/sc/request/: EmscriptenRequest.h  SimpleRequest.h
(+5 files in other folders)
